--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     }
 
     .app-shell {
-      max-width: 1400px;
+      max-width: 100%;   /* ocupa praticamente a tela toda */
       margin: 0 auto;
-      padding: 1.5rem 1.5rem 2.5rem;
+      padding: 1rem 2.5rem 2.5rem;  /* só uma margem lateral pra não colar na borda */
     }
 
     header {
