--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
 
+  <!-- Verificação Google Search Console -->
+  <meta name="google-site-verification" content="q3XGL7YVuF28JussiAvaMBPgQEiCa30yLHMddAw-fKs" />
+
   <title>Meu Dinheiro na Conta – Controle financeiro anual simples</title>
 
   <!-- SEO básico -->
