--- a/acesso.html
+++ b/acesso.html
@@ -6,6 +6,16 @@
   <!-- Verificação Google Search Console -->
   <meta name="google-site-verification" content="q3XGL7YVuF28JussiAvaMBPgQEiCa30yLHMddAw-fKs" />
 
+  <!-- Google tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R8B1DTKENL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-R8B1DTKENL');
+  </script>
+
   <title>Meu Dinheiro na Conta – Acesso</title>
 
   <!-- SEO básico -->
