--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
               </div>
               <div class="form-row">
                 <label for="valorLancamento">Valor (R$)</label>
-                <input id="valorLancamento" type="number" step="0.01" min="0" placeholder="Ex.: 250,00" required />
+                <input id="valorLancamento" type="text" inputmode="decimal" autocomplete="off" placeholder="Ex.: 250,00" required />
               </div>
               <div class="form-row">
                 <label for="descricaoLancamento">Descrição (opcional)</label>
-                <input id="descricaoLancamento" type="text" placeholder="Ex.: Gasolina, Mercado X, Bico de fim de semana..." />
+                <input id="descricaoLancamento" type="text" placeholder="Ex.: Gasolina, Mercado X, Bico de fim de semana." />
               </div>
               <button type="submit">+ Adicionar lançamento</button>
             </form>
